# demagoque

./: .bzrignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  TODO  bmath.f90  bstring.f90  class_ArrayList.f90  common.f90  compareAB.f90  config.h  config.status  configure  configure.ac  configure.scan  dmtdhf.f90  done.txt  ener.f90  fft_fftw.f90  fft_nag.f90  fft_pack.f90  format.f90  initial.f90  input.compare  input.fis  input.frag  input.ott2001  input.test  input.test2  input_parameters.f90  interp.f  interp.f90  interp_test.f90  lib_fftw.f90  lib_lapack.f90  make.sh  make.sh.bak  makefile.old  (+14 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Doxyfile
doc/html/: annotated.html  bexception_8f90.html  bexception_8f90_source.html  bmath_8f90.html  bmath_8f90_source.html  bstring_8f90.html  bstring_8f90_ab24d8bc7373b0431185c9c2980035fbb_cgraph.map  bstring_8f90_ab24d8bc7373b0431185c9c2980035fbb_cgraph.md5  bstring_8f90_ab24d8bc7373b0431185c9c2980035fbb_icgraph.map  bstring_8f90_ab24d8bc7373b0431185c9c2980035fbb_icgraph.md5  bstring_8f90_add6a609edcc15de796d777755c79654b_cgraph.map  bstring_8f90_add6a609edcc15de796d777755c79654b_cgraph.md5  bstring_8f90_add6a609edcc15de796d777755c79654b_icgraph.map  bstring_8f90_add6a609edcc15de796d777755c79654b_icgraph.md5  bstring_8f90_source.html  class__ArrayList_8f90.html  class__ArrayList_8f90_source.html  class__PhysicalConstants_8f90.html  class__PhysicalConstants_8f90_source.html  class__PhysicalQuantity_8f90.html  class__PhysicalQuantity_8f90_source.html  class__UnitSystem_8f90.html  class__UnitSystem_8f90_source.html  classes.html  compareAB_8f90.html  compareAB_8f90_source.html  cons__laws_8f90.html  cons__laws_8f90_source.html  dmtdhf_8f90.html  dmtdhf_8f90_a4c78fab1fadc6556ab23455891514cc9_cgraph.map  dmtdhf_8f90_a4c78fab1fadc6556ab23455891514cc9_cgraph.md5  dmtdhf_8f90_a4fb412c5e8965afa5aade50b0a65d9ec_cgraph.map  dmtdhf_8f90_a4fb412c5e8965afa5aade50b0a65d9ec_cgraph.md5  dmtdhf_8f90_a4fb412c5e8965afa5aade50b0a65d9ec_icgraph.map  dmtdhf_8f90_a4fb412c5e8965afa5aade50b0a65d9ec_icgraph.md5  dmtdhf_8f90_source.html  ener_8f90.html  ener_8f90_a498d75d5ca779f099334f41509d7592a_cgraph.map  ener_8f90_a498d75d5ca779f099334f41509d7592a_cgraph.md5  ener_8f90_a498d75d5ca779f099334f41509d7592a_icgraph.map  (+366 more)
doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  (+78 more)
doc/latex/: annotated.tex  bexception_8f90.tex  bmath_8f90.tex  bstring_8f90.tex  bstring_8f90_ab24d8bc7373b0431185c9c2980035fbb_cgraph.md5  bstring_8f90_ab24d8bc7373b0431185c9c2980035fbb_icgraph.md5  bstring_8f90_add6a609edcc15de796d777755c79654b_cgraph.md5  bstring_8f90_add6a609edcc15de796d777755c79654b_icgraph.md5  class__ArrayList_8f90.tex  class__PhysicalConstants_8f90.tex  class__PhysicalQuantity_8f90.tex  class__UnitSystem_8f90.tex  compareAB_8f90.tex  cons__laws_8f90.tex  dmtdhf_8f90.tex  dmtdhf_8f90_a4c78fab1fadc6556ab23455891514cc9_cgraph.md5  dmtdhf_8f90_a4fb412c5e8965afa5aade50b0a65d9ec_cgraph.md5  dmtdhf_8f90_a4fb412c5e8965afa5aade50b0a65d9ec_icgraph.md5  doxygen.sty  ener_8f90.tex  ener_8f90_a498d75d5ca779f099334f41509d7592a_cgraph.md5  ener_8f90_a498d75d5ca779f099334f41509d7592a_icgraph.md5  ener_8f90_af156f82211a41e497139422d1a7c2807_cgraph.md5  ener_8f90_af156f82211a41e497139422d1a7c2807_icgraph.md5  fft__nag_8f90.tex  fft__nag_8f90_a89e00c863f191d838efd7dda883a632a_icgraph.md5  files.tex  format_8f90.tex  formatting_8f90.tex  index.tex  initial_8f90.tex  initial_8f90_a00ff7d260d65e323892041631c2343bc_cgraph.md5  initial_8f90_a00ff7d260d65e323892041631c2343bc_icgraph.md5  initial_8f90_a2efc6884e391e25a879a5231eeda9956_cgraph.md5  initial_8f90_a2efc6884e391e25a879a5231eeda9956_icgraph.md5  initial_8f90_a8febc15c68033c55e7f246e07e193ed3_icgraph.md5  initial_8f90_a95f93172bd89ed6a8d446e339f217cef_icgraph.md5  initial_8f90_aa274d8457716dc63d8ed63a03a880a19_icgraph.md5  initial_8f90_aa3d543e8caceb0c26b94720e00c38e61_icgraph.md5  initial_8f90_aa52194698c8a672712fb4bf627fdf0e2_cgraph.md5  (+173 more)
log/: 2010-07-20-ener-p02_n100.eps  2010-08-17-squaresumdiff.eps  2010-08-17-squaresumdiff_25_50_100_100.eps  2010-12-24-denmat_x_t_re10_000.eps  2011-03-11-imagpart.eps  2011-06-16-left-right-assymmetry-bug-ea25.eps  2011-06-17-denlrsym1.eps  2011-07-06-denmat-timestep-1.eps  2011-07-22-ho-ea25-cons-abs.eps  2011-07-22-ho-stationary-cons-abs.eps  2011-09-23-2dwre-coll-example.eps  2011-09-23-2dxre-bec.eps  2011-10-24-bec-ho-1dx.eps  bec-1d-100.eps  bec-1d-100.plt  bec-ho-1d.eps  bec-ho-1d.plt  cons_abs_k1200_0_25_25.eps  cons_abs_k1200_100_25_50.eps  cons_abs_p1200_0_25_25.eps  cons_abs_p1200_100_25_50.eps  denpot2.eps  denpotpot.eps  extHOenergy_n100.eps  extHOenergy_n200.eps  extHOenergy_p01_n100.eps  extHOenergy_p01_n200.eps  grid spaces.ods  log.html  x0-comp.eps  x0-comp.plt
log/2011-05-20-densub/: denscomp.eps  densub0.eps  densub4.eps
post/: 2dk.plt  2dw.plt  2dx.plt  cons.plt  convert_pdf.sh  denmat_diag.plt  densub.plt  densub.sh  plot1d.sh  plot2d.sh  plotcons.plt  plotmany.sh  set3d.plt  symdiff.plt
results/: 2dk.plt  plot1d.sh  plot2d.sh
src/: Makefile  Makefile.am  Makefile.in  bexception.f90  bfile.f90  bmath.f90  bstring.f90  class_ArrayList.f90  class_OneWavefunction.F90  class_PhysicalConstants.f90  class_PhysicalQuantity.f90  class_PotHO.F90  class_PotSquareWell.F90  class_Potential.F90  class_PotentialList.F90  class_SquareWellState.F90  class_StateKronigPenney.F90  class_SuperWavefunction.F90  class_UnitSystem.f90  class_Wavefunction.F90  class_WfKronigPenney.F90  class_WfSquareWell.F90  compareAB.f90  cons_laws.f90  demagoque  demagoque-process.F90  dmtdhf.f90  ener.f90  format.f90  formatting.f90  initial.f90  input_parameters.f90  integra.f90  iso_varying_string.f95  lib_fftpack.f90  lib_fftw.f90  lib_lapack.f90  make.sh  mesh.f90  outAnalHarmonic.f90  (+13 more)
tests/: Makefile.am  bmath_dZeroBrent.F90  bmath_dZeroBrent_functions.F90  bmath_dZeroBrent_run.F90  bmath_propagateError_1.F90  class_ArrayList_new.F90  class_SquareWellState_run.F90  class_WfSquareWell_run.F90  test_bmath_LDiffRichardson.F90
